Fixed font weight of dropdown menu on mobile.

--- a/assets/site/assets/less/_global.less
+++ b/assets/site/assets/less/_global.less
@@ -113,6 +113,7 @@ img {
 					color: #fff;
 					.font-size(70);
 					.padding(25,0);
+					font-weight: 300;
 					&:hover {
 						background-color: transparent;
 					}
